--- a/helm-webapp/templates/deployment.yaml
+++ b/helm-webapp/templates/deployment.yaml
@@ -1,22 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: { { .Values.appName } }
+  labels:
+    app: { { .Values.appName } }
 spec:
-  replicas: 2
+  replicas: { { .Values.replicas } }
   selector:
     matchLabels:
-      app: nginx
+      app: { { .Values.appName } }
       tier: frontend
   template:
     metadata:
       labels:
-        app: nginx
+        app: { { .Values.appName } }
         tier: frontend
     spec: # Pod spec
       containers:
-        - name: nginx
-          image: nginx:1.21
+        - name: { { .Values.containers.name } }
+          image: "{{ .Values.image.name }}:{{ .Values.image.tag }}"
           ports:
             - containerPort: 80
           resources:
