--- a/helm-webapp/values.yaml
+++ b/helm-webapp/values.yaml
@@ -1,10 +1,16 @@
-appName: myhelmapp
+appName: nginx-sa
 
 configmap:
-  name: myhelmapp-configmap-v1
+  name: nginx-namespace7253 
   data:
     CUSTOM_HEADER: 'This app was deployed with helm!'
 
-image:
-  name: eyesoncloud/webapp
-  tag: 34
+
+
+replicas: 2
+
+containers:
+ name: nginx-namespace7253
+ image:
+  name: nginx
+  tag : 1.21
